# gestion_satisfactory

./: .gitignore  .pre-commit-config.yaml  Dockerfile  connect_bdd.py  default.env  docker-compose.postgres.yaml  docker-compose.yaml  environment.yml  pyproject.toml  readme.md  requirements.txt  streamlit.py  temp.py  test.ipynb  test_connect_bdd.py  truc.py  update_bdd_from_web.py
.streamlit/: config.toml  pages.toml
app/: Dockerfile  requirements.txt  ❔_HowTo.py
app/configs/: config_scraping.yaml
app/pages/: 📊_recipes_optimizer.py  📱_factory_planner.py  🛠️_Database_manager.py
app/pages/utils/: display.py  graph.py  grids.py  load_df.py
app/utils/: connect_bdd.py  recipes_search.py  update_bdd_from_web.py
app/web_scraping/: utils.py  web_scraping.py
pages/: factory_planner.py  📊_recipes_optimizer.py  📱_factory_planner.py  🛠️_Database_manager.py
pages/utils/: display.py  graph.py  grids.py
scripts/: update_app.bat  update_app.ps1  update_app.sh
src/gestion_satisfactory/: main.py  run_app.py
src/gestion_satisfactory/scraper/: scraper.py  urls.py  utils.py
src/gestion_satisfactory/utils/: connect_bdd.py  display.py  graph.py  grids.py  load_df.py  load_pages_config.py  optimize.py  update_bdd_from_web.py
src/gestion_satisfactory/utils/config/: config.py  load_pages_config.py
src/gestion_satisfactory/utils/database/: connect_bdd.py  load_df.py  update_bdd_from_web.py
src/gestion_satisfactory/utils/display/: display.py  graph.py  grids.py
src/gestion_satisfactory/utils/helpers/: string_utils.py
src/gestion_satisfactory/utils/optimization/: optimize.py  recipe_utils.py
src/gestion_satisfactory/web_pages/: database_manager.py  factory_planner.py  recipes_optimizer.py
src/gestion_satisfactory/web_scraping/: urls.py  utils.py  web_scraping.py
utils/: classes.py  graph.py  optimize.py  recipes_search.py
web_scraping/: urls.py  utils.py  web_scraping.py
