[tool.poetry]
name = "gestion_satisfactory"
version = "0.0.1"
description = ""
authors = [
    "Nicolas Prevot <nicolasprevot57@gmail.com>"
    ]
readme = "README.md"
packages = [{ include = "./gestion_satisfactory", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
loguru = "^0.7.2"
streamlit-option-menu = "^0.3.13"
streamlit-aggrid = "^1.0.5"
streamlit-agraph = "^0.0.45"
sqlalchemy = "^2.0.35"
pulp = "^2.9.0"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.5"
omegaconf = "^2.3.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"
mypy = "^1.10.1"
ruff = "^0.5.2"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
vulture = "^2.11"
isort = "^5.13.2"
black = "^24.4.2"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
exclude = []                          # examples : ["*file*.py", "dir/"]
ignore_decorators = []                # examples : ["@app.route", "@require_*"]
ignore_names = []                     # examples : ["visit_*", "do_*"]
make_whitelist = false                # set to true to generate a whitelist.py file
min_confidence = 80                   # lower to 60 if you want more results
paths = ["src/gestion_satisfactory"]  # examples : ["myscript.py", "mydir", "whitelist.py"]
sort_by_size = true
verbose = false
